--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -24,6 +25,7 @@
     "@mui/x-tree-view": "^7.23.2",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
@@ -31,6 +33,7 @@
     "react-icons": "^5.4.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
+    "react-select": "^5.9.0",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
