--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
+    "react-toastify": "^11.0.2",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
